--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.8.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
