--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-top-loading-bar": "^3.0.2",
+    "reactflow": "^11.11.4",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
