--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "react-day-picker": "9.12.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
+    "react-markdown": "^10.1.0",
     "react-top-loading-bar": "^3.0.2",
     "reactflow": "^11.11.4",
     "recharts": "^3.6.0",
